--- a/wall_follower/params.yaml
+++ b/wall_follower/params.yaml
@@ -2,9 +2,9 @@ wall_follower:
   ros__parameters:
     scan_topic: "/scan"
     drive_topic: "/vesc/high_level/input/nav_2"
-    side: -1
+    side: 1
     velocity: 1.0
-    desired_distance: .75
+    desired_distance: 1.
     ransac: 0
 
 # safety_controller:
